<resources>
    <string name="app_name">AppFirebase</string>
    <string name="txt_explicacion">Bienvenido %1$s, aquí podrá realizar las siguientes tareas dispuestas en los botones.</string>
    <string name="btn_Insertar">Insertar viaje</string>
    <string name="btn_Modify">Modificar Viaje</string>
    <string name="btn_ConsultarTodos">Consultar todos los viajes</string>
    <string name="btn_Consultar5Dias">Consultar viajes de mas de 5 días.</string>
    <string name="btn_Salir">Salir</string>
    <string name="test1lalawlalal">Salir</string>
    <string name="tv_bienvenida">Bienvenido a la mejor App para gestionar viajes</string>
    <string name="hint_usuario">Introduce tu nombre de usuario</string>
    <string name="btn_acceder">Acceder</string>
    <string name="toast_bienvenida">Intrduce un nombre de usuario para continuar</string>
    <string name="clave_nombre">nombre</string>
    <string name="btn_borrar">Eliminar viaje</string>
    <string name="btn_crear_viaje">Crear Viaje</string>
    <string name="txt_personaliza">Crear tu viaje deseado</string>
    <string name="hint_nombre_viaje">Introduce  el nombre del viaje</string>
    <string name="hint_pais">Introduce el pais</string>
    <string name="hint_ciudad">Introduce la ciudad</string>
    <string name="hint_precio">Introduce el precio</string>
    <string name="hint_duracion">Introduce la duracion</string>
    <string name="btn_AtrasListaViajes">Volver a atrás</string>
    <string name="hint_eliminar_viaje">Nombre del viaje a eliminar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_eliminar_volver">Volver</string>
    <string name="toast_eliminar">Introduce el nombre de un viaje para eliminarlo</string>
    <string name="clave_eliminar">Eliminar</string>
</resources>
