<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarViaje">

    <Button
        android:id="@+id/btnCrearViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="35dp"
        android:text="@string/btn_crear_viaje" />

    <TextView
        android:id="@+id/txtPersonaliza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_personaliza"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtPersonaliza"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="@string/hint_nombre_viaje"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:hint="@string/hint_pais"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="197dp"
        android:ems="10"
        android:hint="@string/hint_ciudad"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="198dp"
        android:ems="10"
        android:hint="@string/hint_precio"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtPersonaliza"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-7dp"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:hint="@string/hint_duracion"
        android:inputType="number" />

</RelativeLayout>